// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> matches snapshot 1`] = `
<div>
  <div
    class="progress css-1gurv8p-progressBarStyles-progressBarStyles"
    id="my-progress-1"
  >
    <div
      class="progress-bar-container"
    >
      <div
        class="percentage-container"
      >
        <div
          class="css-n6kbpa-percentageStyles-percentageStyles"
          data-testid="percentage"
        >
          75‏%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> matches snapshot with zero percent 1`] = `
<div>
  <div
    class="css-n9tnpu-progressBarStyles-progressBarStyles"
  >
    <div
      class="progress-bar-container"
    >
      <div
        class="percentage-container"
      >
        <div
          class="css-n6kbpa-percentageStyles-percentageStyles"
          data-testid="percentage"
        >
          0‏%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> renders correctly with custom radius 1`] = `
<div>
  <div
    class="css-rtftkg-progressBarStyles-progressBarStyles"
  >
    <div
      class="progress-bar-container"
    >
      <div
        class="percentage-container"
      >
        <div
          class="css-n6kbpa-percentageStyles-percentageStyles"
          data-testid="percentage"
        >
          75‏%
        </div>
      </div>
    </div>
  </div>
</div>
`;
